# nederlang

./: .gitignore  Cargo.toml  README.md  create_benchmark.py
.github/workflows/: rust.yml
benches/: bench_arithmetic.rs  bench_objects.rs  bench_parser.rs  bench_recursive_fib.rs
docs/playground/: Cargo.toml  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  worker.js
docs/playground/assets/: app.js  style.css  worker.js
docs/playground/pkg/: package.json  playground.js  playground_bg.wasm
docs/playground/src/: lib.rs
examples/: README.md  benchmark_1.nl  fib-loop.nl  fib-recursive.nl  fib.nl  juffen.nl  project-euler-1.nl  project-euler-probleem-1.nl  rekenen.nl  selectie-sorteer.nl  splits-tekst.nl  vanalles.nl  variabelen_scopes.nl  voorbeeld.nl
src/: ast.rs  builtins.rs  compiler.rs  eval.rs  gc.rs  lexer copy.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.rs  symbols.rs  vm.rs
tests/: vm_test.rs
