[package]
name = "nederlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
hashbrown = "0.12"

[dev-dependencies]
criterion = "0.3"

[profile.bench]
lto = true

[profile.release]
debug = true

# Criterion benchmarks:
[[bench]]
name = "bench_recursive_fib"
harness = false

[[bench]]
name = "bench_parser"
harness = false

[[bench]]
name = "bench_arithmetic"
harness = false

[[bench]]
name = "bench_objects"
harness = false
