[package]
name = "nederlang"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[dependencies]
once_cell = "1.16.0"

[dev-dependencies]
criterion =  {version = "0.3", default-features = false }

[profile.bench]
lto = true

[profile.release]
debug = true

# Criterion benchmarks:
[[bench]]
name = "bench_recursive_fib"
harness = false

[[bench]]
name = "bench_parser"
harness = false

[[bench]]
name = "bench_arithmetic"
harness = false