[package]
name = "nederlang"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[dev-dependencies]
criterion =  {version = "0.3", default-features = false }

[profile.bench]
lto = true
debug = true

[profile.release]
lto = true

# Criterion benchmarks:
[[bench]]
name = "bench_recursive_fib"
harness = false

[[bench]]
name = "bench_parser"
harness = false

[[bench]]
name = "bench_arithmetic"
harness = false

[dependencies]
bitvec = "1.0.1"
